# aoc-ranking

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml
.circleci/: config.yml
aoc_ranking/: aoc.py  util.py
aoc_ranking/cmds/: main.py
data/: 2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  2021.txt  2022.txt  2023.txt
tests/: test_aoc.py  test_aoc_ranking.py
tests/files/: 2020-01.html
tests/static/: test_black.py
