[tool.poetry]
name = "aoc-ranking"
version = "0.1.0"
description = ""
authors = ["Iskandar Setiadi <iskandarsetiadi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.0b0"
isort = "^5.10.1"
pytest = "^6.2"

[tool.isort]
line_length = "88"
multi_line_output = "3"
combine_as_imports = "1"
include_trailing_comma = "True"

[tool.poetry.scripts]
aoc-ranking = "aoc_ranking.cmds.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
