[tool.poetry]
name = "aoc-ranking"
version = "0.1.0"
description = ""
authors = ["Iskandar Setiadi <iskandarsetiadi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"

[tool.isort]
line_length = "88"
multi_line_output = "3"
combine_as_imports = "1"
include_trailing_comma = "True"

[tool.poetry.scripts]
aoc-ranking = "aoc_ranking.cmds.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
